deployment/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ifmvp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /api/emails
        pathType: Prefix
        backend:
          service:
            name: email-service
            port:
              number: 80
      - path: /api/mock
        pathType: Prefix
        backend:
          service:
            name: mock-service
            port:
              number: 80
      - path: /api/statistics
        pathType: Prefix
        backend:
          service:
            name: stats-service
            port:
              number: 80
